infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restrictify
  labels:
    name: restrictify
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: restrictify.com
    http:
      paths:
      - pathType: Prefix
        path: /api/auth/?(.*)
        backend:
          service:
            name: auth-service
            port: 
              number: 8000
